# cert-ctrl

./: .clangd  .clangd.tpl  .gitignore  .gitmodules  AGEMENT.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CMakeUserPresets.tpl.json  Dockerfile.ubuntu20  INSTALL.md  README.md  RELEASE.md  agent.md  build.sh  capture_device_bundle.sh  codex-session.txt  compile_commands.json  device_registration_apikey.sh  device_registration_workflow.ps1  device_registration_workflow.sh  error_codes.ini  gen_error.py  how-to-build.txt  platform-problems.md  run_all_test.ps1  run_all_test.sh  steps.json  t.ps1  test_protobuf.cmake  vcpkg.json
.github/workflows/: bb-build-selfhost.yml.txt  cmake-multi-platform.yml
apps/tray/: CMakeLists.txt
apps/tray/src/: tray_app.cpp
cmake/osx/: atomic_stub.cpp
config_dir/: .gitignore  application.json.tpl  application.yaml.tpl  certctrl.service  certctrl.service.tpl  httpclient_config.json.tpl  ioc_config.json.tpl  log_config.json.tpl  tunnel_config.json.tpl  websocket_config.json.tpl
docker/: alpine-builder.Dockerfile  openwrt-builder.Dockerfile  ubuntu-builder.Dockerfile
docs/: AGENT_EVENT_HANDLING.md  AGENT_RUNTIME_BEHAVIOR.md  ASYNC_LIFETIME_AUDIT.md  CAPTURE_DEVICE_BUNDLE.md  CERT_KEY_DISTRIBUTION_POLICY.md  CERT_RECORD_RETRIEVAL.md  CLIENT_AGENT_POLLING.md  COMPILER_PORTABILITY.md  CONFIG_DIR_PROVISIONING.md  Certificate_Encryption_System.md  DEPLOYMENT_STRATEGY.md  DEVICE_INSTALL_CONFIGS_DESIGN.md  DEVICE_ONBOARDING_AND_AUTH.md  DEVICE_POLLING_UPDATES.md  DOCKER_TEST_ENVIRONMENT.md  FRONTEND_CERT_POLICY_UI.md  HTTP_API_REFERENCE.md  INSTALL_WORKFLOW_ASYNC_REFACTOR.md  INSTALL_WORKFLOW_ASYNC_REFACTOR_JOURNAL.md  LOGIN_HANDLER_ASAN_INVESTIGATION.md  LOGIN_WORKFLOW.md  OBJECT_LIFETIMES.md  RELEASE_WORKFLOW.md  SIGNAL_HANDLER_ARCHITECTURE.md  SUBMODULE_WORKFLOW.md  UPDATES_POLLING_TEST_STATUS.md  USER_DEVICE_REGISTRATION_WORKFLOW.md  WEBSOCKET_POLLING_MIGRATION_COMBINED.md  WINDOWS_BUILD_STATUS.md  acme_challenge_coordination.md  bundle_handler_code_as_doc.cppcode  cert_record_code_as_doc.cppcode  certificate_gen_code_as_doc.cppcode  macos_background_service.md  route_code_as_doc.cppcode  simple_https_reverse_proxy_tunnel.md
docs/e2e/: AUTOMATED_E2E_TEST_PLAN.md
include/: cert_ctrl_entry.hpp  certctrl_common.hpp  certctrl_config.hpp  common_macros.hpp  install_config_fetcher.hpp  my_error_codes.hpp  resource_fetcher.hpp
include/acme/: acme_http01_manager.hpp  acme_http01_server.hpp  acme_tlsalpn01_manager.hpp  acme_tlsalpn01_server.hpp
include/conf/: certctrl_config.hpp  logging_config.hpp  tunnel_config.hpp  websocket_config.hpp
include/customio/: color_printer.hpp  console_output.hpp  spinner.hpp
include/data/: agent_update_check.hpp  data_shape.hpp  device_auth_types.hpp  device_auth_types.hpp.serverside  device_updates.hpp  install_config_dto.hpp
include/handlers/: agent_update_checker.hpp  ca_handler.hpp  certificates_handler.hpp  conf_handler.hpp  device_auth_types.hpp  device_automation_handler.hpp  expiry_guard.hpp  handler_dispatcher.hpp  i_handler.hpp  info_handler.hpp  info_handler_tokens.hpp  install_config_apply_handler.hpp  install_config_handler.hpp  install_config_manager.hpp  login_handler.hpp  misc_handler.hpp  session_refresh_retry.hpp  session_refresher.hpp  signal_dispatcher.hpp  update_handler.hpp  updates_polling_handler.hpp
include/openssl/: cert_privkey_crypto.hpp  crypt_util.hpp  openssl_raii.hpp  x509_time.hpp
include/state/: device_state_store.hpp
include/tunnel/: tunnel_client.hpp  tunnel_messages.hpp
include/util/: browser_trust_sync.hpp  device_fingerprint.hpp  file_compress_util.hpp  my_logging.hpp  platform_compat.hpp  secret_util.hpp  string_util.hpp  user_key_crypto.hpp
include/websocket/: websocket_client.hpp  websocket_messages.hpp
install-service/: AGENTS.md  NETWORK_INSTALL_PIPELINE.md  README.md  install-macos.sh  package-lock.json  package.json  test-install.ps1  tsconfig.json  wrangler.toml
install-service-selfhost/: README.md  deploy.sh  github-release.sh  haproxy.cfg  package-lock.json  package.json  publish.sh
install-service-selfhost/ansible/: README.md  ansible.cfg  inventory.yml  vars.example.yml  vars.yml
install-service-selfhost/scripts/: build-macos-release.sh  (+2 more)
install-test/: Dockerfile  README.md  installer.sh  run.sh
my-triplets/: x64-linux-cpp17.cmake  x64-linux-dynamic-link-cpp17.cmake  x64-linux-musl.cmake  x64-osx-cpp17.cmake  x64-osx-cpp20.cmake  x64-windows.cmake
scripts/: README.md  build-alpine-docker.sh  build-freebsd.sh  build-openwrt-docker.sh  build-ubuntu-docker.sh  compare-install-services.sh  inspect-latest-build-log.sh
src/: agent_update_checker.cpp  browser_trust_sync.cpp  cert_ctrl_entrypoint.cpp  conf_handler.cpp  crypt_util.cpp  device_fingerprint.cpp  file_compress_util.cpp  login_handler.cpp  misc_handler.cpp  openssl_raii.cpp  secret_util.cpp  string_util.cpp  win_service.cpp
temp_config_test/: application.json
test_config/: application.json  httpclient_config.json  ioc_config.json  log_config.json
tests/: CMakeLists.txt  msvc_lambda_capture_probe.cpp  run_updates_polling_handler.sh  test-env  test-env.tpl  test_acme_http01_server.cpp  test_acme_tlsalpn01_server.cpp  test_boost_di_lifetimes.cpp  test_device_automation_handler.cpp  test_device_fingerprint.cpp  test_device_registration.cpp  test_device_registration_monadic.cpp  test_device_update_signals.cpp  test_exec_action.cpp  test_import_ca_action.cpp  test_info_handler.cpp  test_install_config_manager.cpp  test_login_handler_workflow.cpp  test_login_real_server.cpp  test_program_options.cpp  test_session_refresher.cpp  test_tunnel_client.cpp  test_tunnel_messages.cpp  test_updates_polling_handler.cpp  test_websocket_client.cpp  test_websocket_messages.cpp
tests/e2e/: README.md  run_ws_e2e.sh  ws_e2e_harness.py
tests/include/: api_test_helper.hpp  install_config_manager_test_utils.hpp  install_manager_harness.hpp  login_handler_test_support.hpp  login_helper.hpp  test_config_utils.hpp  test_injector.hpp  test_install_config_helper.hpp
(+130 files in other folders)
